# cli_template-rs

./: Cargo.toml
src/: main.rs
