[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
log = "0.4.8"
env_logger = "0.7.0"
rson_rs = "0.2.1"
serde_derive = "1.0.101"
serde = "1.0.101"
anyhow = "1.0.26"
