[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
rson_rs = "0.2.1"
serde_derive = "1.0.105"
serde = "1.0.105"
anyhow = "1.0.27"
tracing = "0.1.13"
tracing-subscriber = "0.2.3"
