[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1" }
rson_rs = "0.2.1"
serde_derive = "1.0.105"
serde = "1.0.105"
eyre = "0.6.0"
tracing = "0.1.13"
tracing-subscriber = { version = "0.2.3", features = ["fmt", "env-filter"] }
